--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title>au-uk</title>
+  <title></title>
 </head>
 <body>
   <!-- site content -->
