--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Welcome</title>
 </head>
 <body>
   <!-- site content -->
-  <p>AU-UK</p>
+  <p></p>
 </body>
 </html>
