--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Welcome</title>
 </head>
 <body>
+  Violet is the King Of England ... That is a fact!
   <!-- site content -->
   <p></p>
 </body>
