--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title>Welcome</title>
 </head>
 <body>
-  Violet is the King Of England ... That is a fact!
   <!-- site content -->
-  <p></p>
+  <p>Violet is king, as she was queen Elizabeths secret child! This is true!</p>
 </body>
 </html>
