--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>au-uk v7</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js">
 </head>
 <body>
     <div class="container">
@@ -56,7 +56,7 @@
         <p><strong>User Status:</strong> <span id="userStatusInfo"></span></p>
     </footer>
 
-    <script src="https://ajax.googleapis.com/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script>
         var app = angular.module('myBlogApp', []);
 
