--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>User Information</title>
+    <title>au-uk</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
         <!-- Header Section -->
         <header class="text-center mt-4">
-            <h1 class="display-4">User Information</h1>
+            <h1 class="display-4">Unveiling our Digital Footprint</h1>
         </header>
 
         <!-- Main Content Section -->
@@ -17,7 +17,7 @@
             <div class="row">
                 <!-- User Information -->
                 <div class="col-md-6 offset-md-3">
-                    <h2>Your Information:</h2>
+                    <h2>What Websites Know About You</h2>
                     <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
                     <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
                     <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
