--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <!-- Header Section -->
         <header class="text-center mt-4">
-            <h1 class="display-4">Experiment</h1>
+            <h1 class="display-4">Experimental</h1>
         </header>
 
         <!-- Main Content Section -->
@@ -17,7 +17,7 @@
             <div class="row">
                 <!-- User Information -->
                 <div class="col-md-6 offset-md-3">
-                    <h2>Unveiling our digital footprint with client side JS</h2>
+                    <h2>Our digital footprint</h2>
                     <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
                     <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
                     <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
