--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>au-uk</title>
+    <title>User Information</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <style>
+        /* Custom CSS for the banner */
+        .web-banner {
+            background-color: #007BFF;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
+    <!-- Web Banner -->
+    <div class="web-banner">
+        <p>This is a responsive web banner. You can place important announcements or content here.</p>
+    </div>
+
     <div class="container">
         <!-- Header Section -->
         <header class="text-center mt-4">
-            <h1 class="display-4">Experimental</h1>
+            <h1 class="display-4">User Information</h1>
         </header>
 
         <!-- Main Content Section -->
@@ -17,7 +31,7 @@
             <div class="row">
                 <!-- User Information -->
                 <div class="col-md-6 offset-md-3">
-                    <h2>Our digital footprint</h2>
+                    <h2>Your Information:</h2>
                     <p><strong>Browser:</strong> <span id="browserInfo">Loading...</span></p>
                     <p><strong>Operating System:</strong> <span id="osInfo">Loading...</span></p>
                     <p><strong>Date:</strong> <span id="dateInfo">Loading...</span></p>
