--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         }
         
         .banner-content {
-            animation: scrollData 20s linear infinite;
+            white-space: nowrap;
+            animation: scrollData 40s linear infinite;
         }
 
         @keyframes scrollData {
