--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             white-space: nowrap;
             animation: scrollData 40s linear infinite;
         }
+        
+        /* Center the scrolling text */
+        .banner-content p {
+            display: inline-block;
+            margin: 0;
+            font-size: 1rem;
+        }
 
         @keyframes scrollData {
             0% {
