--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
             font-size: 1rem;
         }
 
-        @keyframes scrollData {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(-100%);
-            }
+        /* Custom CSS for the Matrix effect */
+        .matrix-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        .matrix-text {
+            position: absolute;
+            color: #00FF00;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -75,32 +83,52 @@
         </section>
     </div>
 
-    <script>
-        // JavaScript code to display user information
-        document.getElementById('browserInfo').textContent = navigator.userAgent;
-        document.getElementById('osInfo').textContent = navigator.platform;
-        document.getElementById('dateInfo').textContent = new Date().toDateString();
-        document.getElementById('timeInfo').textContent = new Date().toLocaleTimeString();
-        document.getElementById('timezoneInfo').textContent = Intl.DateTimeFormat().resolvedOptions().timeZone;
-        
-        // Function to get and display user's location
-        function getUserLocation() {
-            if ("geolocation" in navigator) {
-                navigator.geolocation.getCurrentPosition(function(position) {
-                    const latitude = position.coords.latitude;
-                    const longitude = position.coords.longitude;
-                    document.getElementById('locationInfo').textContent = `Latitude: ${latitude}, Longitude: ${longitude}`;
-                });
-            } else {
-                document.getElementById('locationInfo').textContent = "Location not available.";
-            }
-        }
+    <!-- Matrix Falling Text Effect -->
+    <div class="matrix-container">
+        <script>
+            // Create the Matrix effect
+            const matrixContainer = document.querySelector(".matrix-container");
 
-        // Call the function to get the user's location
-        getUserLocation();
-        
-        // Display language information in the web banner
-        document.getElementById('languageInfo').textContent = `Language: ${navigator.language}`;
-    </script>
+            // Adjust the number of columns and text size for responsiveness
+            const columns = window.innerWidth / 10;
+            const fontSize = window.innerWidth / 100;
+            const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+            const matrixText = [];
+
+            for (let i = 0; i < columns; i++) {
+                matrixText[i] = {
+                    text: "",
+                    y: Math.floor(Math.random() * window.innerHeight),
+                    speed: Math.floor(Math.random() * 5) + 1,
+                };
+            }
+
+            function draw() {
+                matrixContainer.innerHTML = "";
+                matrixText.forEach((item) => {
+                    const text = document.createElement("div");
+                    text.className = "matrix-text";
+                    text.textContent = item.text;
+                    text.style.fontSize = fontSize + "px";
+                    text.style.top = item.y + "px";
+                    text.style.left = matrixText.indexOf(item) * 10 + "px";
+                    matrixContainer.appendChild(text);
+
+                    // Randomly update the text and y position
+                    if (Math.random() > 0.975 || item.y > window.innerHeight) {
+                        item.text = characters[Math.floor(Math.random() * characters.length)];
+                        item.y = 0;
+                        item.speed = Math.floor(Math.random() * 5) + 1;
+                    } else {
+                        item.y += item.speed;
+                    }
+                });
+
+                requestAnimationFrame(draw);
+            }
+
+            draw();
+        </script>
+    </div>
 </body>
 </html>
